# ai_financial_advisor

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: trading_mvp.yaml
src/advisor/: config.py  main.py  models.py
src/advisor/ai/: langchain_flow.py  prompt_templates.py
src/advisor/engine/: followup_market_context.py  metrics.py  risk_policy.py  triggers.py
src/advisor/ibkr/: client.py  scanner.py  wrapper.py
src/advisor/output/: logger.py
src/advisor/storage/: postgres.py  schema.sql
src/advisor/trading/: __init__.py  config.py  service.py  types.py
src/advisor/trading/data/: ibkr_history.py  loader.py
src/advisor/trading/execution/: simulator.py
src/advisor/trading/paper/: broker.py  engine.py  kill_switch.py
src/advisor/trading/portfolio/: state.py
src/advisor/trading/reporting/: analytics.py  io.py
src/advisor/trading/risk/: engine.py
src/advisor/trading/strategies/: base.py  conflicts.py  orb.py  vwap_pullback.py
tests/: test_ai_contract.py  test_followup_market_context.py  test_ibkr_client_historical_utils.py  test_ibkr_wrapper_historical.py  test_main_historical_refresh.py  test_metrics.py  test_postgres_historical_bars.py  test_risk_policy.py  test_triggers.py
tests/trading/: test_conflicts.py  test_execution_simulator.py  test_ibkr_chunked_history.py  test_kill_switch.py  test_orb_strategy.py  test_paper_state_recovery.py  test_risk_engine.py  test_service_flow.py  test_vwap_strategy.py
